--- a/app/src/main/res/layout/row_activity.xml
+++ b/app/src/main/res/layout/row_activity.xml
@@ -40,12 +40,27 @@
             android:gravity="left"
             android:text="ㅠㅠ" />
     </LinearLayout>
-    <TextView
-        android:id="@+id/activityTypeText"
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:gravity="left"
-        android:text="액티비티 타입" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/activityTypeText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="액티비티 타입"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/pictureView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/back_none" />
+
+    </LinearLayout>
 
 </LinearLayout>
