--- a/app/src/main/res/layout/row_person.xml
+++ b/app/src/main/res/layout/row_person.xml
@@ -46,7 +46,7 @@
                 android:layout_width="17dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                app:srcCompat="@drawable/icon_gyoyang" />
+                app:srcCompat="@drawable/fox" />
 
             <!--            <Button-->
             <!--                android:layout_width="55dp"-->
