activity, adapter nogada

--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="180dp"
+    android:layout_width="160dp"
     android:layout_height="160dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:layout_margin="10dp"
     android:orientation="vertical">
 
 
     <ImageView
-        android:id="@+id/home_placeImg"
-        android:layout_width="180dp"
+        android:id="@+id/home_Img"
+        android:layout_width="160dp"
         android:layout_height="130dp"
         android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/place_img"/>
+        app:srcCompat="@drawable/place_img"
+        android:scaleType="centerCrop"/>
 
     <TextView
-        android:id="@+id/home_SubjectText"
-        android:layout_width="180dp"
+        android:id="@+id/home_Subject"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
