--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -14,6 +14,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_back"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:orientation="horizontal">
@@ -49,18 +65,17 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="8dp"
                         android:orientation="vertical"
                         >
                         <TextView
                             android:id="@+id/my_followerNum"
-                            android:layout_width="80dp"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="1411"
                             android:textSize="16dp"/>
                         <TextView
-                            android:layout_width="80dp"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="팔로워"
@@ -73,25 +88,24 @@
                     <View
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:background="@color/lightGray" />
 
                     <LinearLayout
-                        android:layout_width="80dp"
+                        android:layout_width="50dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
                         android:orientation="vertical"
                         >
                         <TextView
                             android:id="@+id/my_followingNum"
-                            android:layout_width="80dp"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="24"
                             android:textSize="16dp"/>
                         <TextView
-                            android:layout_width="80dp"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="팔로잉"
