--- a/app/src/main/res/layout/information_person.xml
+++ b/app/src/main/res/layout/information_person.xml
@@ -3,9 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <!--    뒤로가기 만들면 될듯-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/back_bottomline"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/pinfoTab_backBtn"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/ic_back" />
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,11 +33,12 @@
             android:gravity="center"
             android:orientation="vertical">
 
+
             <ImageView
-                android:id="@+id/personTab_personimg"
+                android:id="@+id/pinfoTab_personimg"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 app:srcCompat="@drawable/user" />
 
             <TextView
@@ -47,25 +64,25 @@
 
                 <!--                버튼으로 만들었지만.. 그냥 배경 적용하기 편하려고 넣어두었습니다..-->
                 <Button
-                    android:layout_width="80dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="3dp"
                     android:background="@drawable/back_border_corner_round"
                     android:text="CEO"
                     android:textSize="13dp" />
 
                 <Button
-                    android:layout_width="80dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="3dp"
                     android:background="@drawable/back_border_corner_round"
                     android:text="IT"
                     android:textSize="13dp" />
 
                 <Button
-                    android:layout_width="80dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="3dp"
                     android:background="@drawable/back_border_corner_round"
                     android:text="스타트업"
                     android:textSize="13dp" />
@@ -77,19 +94,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/followerNum"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="1411"
-                        android:textSize="18dp"/>
+                        android:textSize="18dp" />
+
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
@@ -99,27 +117,26 @@
                 </LinearLayout>
 
 
-
                 <View
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:background="@color/lightGray" />
 
                 <LinearLayout
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/followingNum"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="24"
-                        android:textSize="18dp"/>
+                        android:textSize="18dp" />
+
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
@@ -130,15 +147,60 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/pInfoTab_followbtn"
                 android:layout_width="80dp"
                 android:layout_height="35dp"
                 android:layout_margin="5dp"
-                android:background="@drawable/back_corner_round"
+                android:background="@drawable/back_corner_roundround"
                 android:backgroundTint="@color/pink"
-                android:text="CEO"
-                android:textSize="13dp"
-                android:textColor="@color/white"/>
+                android:text="팔로우"
+                android:textColor="@color/white"
+                android:textSize="13dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    app:srcCompat="@drawable/ic_pushpin" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="전 스타트업 삼산택 대표"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginRight="4dp"
+                    app:srcCompat="@drawable/ic_pushpin" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="전 스타트업 삼산택 대표"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
 
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
