--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/login_background_img"
     tools:context=".LoginActivity"
-    android:scaleType="centerCrop"    >
+    android:scaleType="centerCrop">
 
-    <EditText
-        android:id="@+id/user_id"
+    <LinearLayout
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="id를 입력하세요"/>
-    <EditText
-        android:id="@+id/user_pwd"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="password를 입력하세요"/>
-    <Button
-        android:id="@+id/login"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="로그인"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@drawable/back_corner_circle"
+        android:gravity="center"
+        android:id="@+id/google">
 
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#1877F2"
-        android:text="페이스북으로 로그인인"/>
+        <ImageView
+            android:layout_marginLeft="17dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:srcCompat="@drawable/ic_google"
+            />
 
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#EA4335"
-        android:id="@+id/google"
-        android:text="구글로 로그인"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Google 로그인"
+            android:gravity="left|center_vertical"
+            android:textSize="17dp"/>
+
+    </LinearLayout>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
@@ -46,11 +43,23 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/white"/>
-    <Button
+
+    <LinearLayout
         android:id="@+id/nonMemberBtn"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="비회원으로 이용하기"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@drawable/back_corner_circle"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="비회원으로 이용하기"
+            android:gravity="center"
+            android:textSize="17dp"/>
+
+    </LinearLayout>
 
 
 
