--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/searchBtn"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginLeft="15dp"
