--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/searchBtn"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginLeft="20dp"
