--- a/app/src/main/res/drawable-v24/spinner.xml
+++ b/app/src/main/res/drawable-v24/spinner.xml
@@ -10,7 +10,7 @@
             <corners android:radius="30dp" />
             <stroke
                 android:width="1.5dp"
-                android:color="@color/pink" />
+                android:color="#CCCCCC" />
         </shape>
     </item>
 
