--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -32,6 +32,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/a_search_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="5dp"
@@ -40,6 +41,7 @@
 
 
             <EditText
+                android:id="@+id/search_keyword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
