--- a/app/src/main/res/layout/information_place.xml
+++ b/app/src/main/res/layout/information_place.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_anchorGravity="clip_horizontal|center_vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,8 +28,8 @@
             android:layout_height="25dp"
             android:layout_gravity="right"
             android:layout_marginLeft="300dp"
-            android:gravity="right"
-            android:background="@drawable/heart_button" />
+            android:background="@drawable/heart_button"
+            android:gravity="right" />
     </LinearLayout>
 
     <ScrollView
@@ -42,68 +43,77 @@
             android:orientation="vertical">
 
 
-            <ImageView
-                android:id="@+id/plinfoTab_placeimg"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="15dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/place_img" />
-
-            <TextView
-                android:id="@+id/plinfoTab_subject"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textSize="23dp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <FrameLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="25dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
+                    android:id="@+id/plinfoTab_placeimg"
+                    android:layout_width="411dp"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/place_img" />
 
-                <TextView
-                    android:id="@+id/plinfoTab_concept"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp" />
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3" />
+
+                    <TextView
+                        android:id="@+id/plinfoTab_subject"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_gravity="left"
+                        android:layout_weight="1"
+                        android:background="#CC5A5A5A"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="30sp"
+                        android:text="원목이 숨쉬는 카페✨"
+                        android:textColor="#ffffffff"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/placeTag"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="#CC5A5A5A"
+                            android:paddingLeft="30sp"
+                            android:text="조용한 분위기/지상층 밝음/창문 환기/원목 인테리어/무료 빔프로, 노트북"
+                            android:textColor="#ffffffff"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="25dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/ic_bookmark" />
-
-                <TextView
-                    android:id="@+id/plinfoTab_maxnum"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="30sp"
+                android:paddingTop="30sp">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -116,16 +126,82 @@
                     android:id="@+id/plinfoTab_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="10sp"
+                    android:text="매일 오전 08:00-오후11:00"
                     android:textSize="20dp" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/plinfoTab_content"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textSize="17dp" />
+                android:orientation="horizontal"
+                android:paddingLeft="30sp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10sp"
+                    android:text="012-345-6789"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="30sp">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_maxnum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10sp"
+                    android:text="제주특별자치도 제주시 애월읍"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:paddingLeft="30sp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    app:srcCompat="@drawable/ic_bookmark" />
+
+                <TextView
+                    android:id="@+id/plinfoTab_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:paddingLeft="10sp"
+                    android:text="dfs"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -137,13 +213,13 @@
                     android:id="@+id/plinfoTab_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="13dp"/>
+                    android:textSize="13dp" />
 
                 <TextView
                     android:id="@+id/plinfoTab_writer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="13dp"/>
+                    android:textSize="13dp" />
 
             </LinearLayout>
         </LinearLayout>
