--- a/app/src/main/res/layout/row_person.xml
+++ b/app/src/main/res/layout/row_person.xml
@@ -2,28 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="10dp"
+    android:gravity="center"
 
     android:background="@drawable/back_corner_circle"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/personImg"
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="15dp"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/user" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="15dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -56,14 +60,20 @@
             <!--                android:text="팔로우"-->
             <!--                android:textSize="10dp"/>-->
 
-            <Button
-                android:id="@+id/followbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:backgroundTint="#E91E63"
-                android:text="follow"
-                android:textColor="#FFFFFF" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="right|center_vertical">
+                <Button
+                    android:id="@+id/followbtn"
+                    android:layout_width="70dp"
+                    android:layout_height="35dp"
+                    android:backgroundTint="#E91E63"
+                    android:text="follow"
+                    android:textSize="10dp"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -72,7 +82,6 @@
             android:id="@+id/pSubjectText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:gravity="left"
             android:text="소프트웨어 엔지니어"
             android:textSize="13dp" />
@@ -97,7 +106,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:gravity="left"
                     android:text="개발"
                     android:textColor="@color/pink"
                     android:textSize="13dp" />
@@ -120,7 +128,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:gravity="left"
                     android:text="창업"
                     android:textColor="@color/pink"
                     android:textSize="13dp" />
@@ -141,7 +148,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:gravity="left"
                     android:text="풀스택"
                     android:textColor="@color/pink"
                     android:textSize="13dp" />
@@ -149,7 +155,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
 
 
     </LinearLayout>
